# idle-mmorpg

./: .gitignore  404.html  LICENSE  README.md  TODO.md  index.html  main-4QHGJHGP.js  main-6WLLBQZB.js  main-EQWVSR53.js  main-KPOOT6LO.js  main-MQGOPRHP.js  main-OA4QSFCN.js  main-TKATNG5T.js  main-YZ5VQ5JL.js  main-ZC32DPZT.js  main-ZQRG3EXN.js  styles-PIYSP2VF.css  styles-WR7Y5EWF.css
idle-mmorpg-editor/: CMakeLists.txt  Main.qml  README.md  angular.json  main.cpp  package.json  tsconfig.json
idle-mmorpg-editor/qml/: Editor.qml  FilesBar.qml  FilesBarDesign.ui.qml  Main.qml  NavBar.qml
idle-mmorpg-editor/qml/Components/: CMakeLists.txt
idle-mmorpg-editor/qml/components/: Editor.qml  FilesBar.qml  FilesBarDesign.ui.qml  LeftBar.qml  NavBar.qml
idle-mmorpg-editor/qml/styles/: CMakeLists.txt  Colors.qml  Spaces.qml  qmldir
idle-mmorpg-editor/src/: RegisterType.cpp  RegisterType.h  index.html  main.ts  styles.scss
idle-mmorpg-editor/src-tauri/: Cargo.toml  tauri.conf.json
idle-mmorpg-editor/src-tauri/capabilities/: default.json  fs.json
idle-mmorpg-editor/src-tauri/src/: main.rs
idle-mmorpg-editor/src/Control/: CreatureControl.cpp  CreatureControl.h  ItemControl.cpp  ItemControl.h  SpellControl.cpp  SpellControl.h
idle-mmorpg-editor/src/app/: app.config.ts  app.routes.ts  app.ts
idle-mmorpg-server/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
idle-mmorpg-server/Commons/: ActionsHelper.cpp  ActionsHelper.h  DecimalHelper.cpp  DecimalHelper.h  JsonHelper.cpp  JsonHelper.h  LevelExperienceHelper.cpp  LevelExperienceHelper.h  LocationHelper.cpp  LocationHelper.h
idle-mmorpg-server/Core/Instance/: CombatInstance.cpp  CombatInstance.h  LocationActionSystem.cpp  LocationActionSystem.h  LocationInstance.cpp  LocationInstance.h  RegionInstance.cpp  RegionInstance.h  WorldInstance.cpp  WorldInstance.h
idle-mmorpg-server/Core/Manager/: CreatureManager.cpp  CreatureManager.h  ItemManager.cpp  ItemManager.h  QuestManager.cpp  QuestManager.h  ServerConfigurationManager.cpp  ServerConfigurationManager.h  SkillManager.cpp  SkillManager.h  SpellManager.cpp  SpellManager.h  WorldManager.cpp  WorldManager.h
idle-mmorpg-server/Core/Message/: MessageHelper.cpp  MessageHelper.h  MessageReceiver.cpp  MessageReceiverType.h  MessageSender.cpp  MessageSender.h  MessageSenderType.h  MessageType.h
idle-mmorpg-server/Database/: Database.cpp  Query.cpp  Query.h  QueryLoader.cpp  QueryLoader.h
idle-mmorpg-server/Helper/: DecimalHelper.cpp  DecimalHelper.h  JsonHelper.h  LevelExperienceHelper.h  LocationHelper.cpp  LocationHelper.h  RequirementHelper.cpp  RequirementHelper.h  SkillHelper.cpp  SkillHelper.h
idle-mmorpg-server/Model/: Requirement.cpp  Requirement.h  RequirementType.h
idle-mmorpg-server/Network/: NetworkSession.cpp
idle-mmorpg-server/Repository/: Repository.cpp
idle-mmorpg-server/Resources/: V001__create_table_user.sql  V002__create_table_character.sql  V003__create_table_character_vitals.sql  create_table_character.sql  create_table_character_attributes.sql  create_table_character_combat_attributes.sql  create_table_character_coordinates.sql  create_table_character_equipament.sql  create_table_character_equipment.sql  create_table_character_inventory.sql  create_table_character_progression.sql  create_table_character_quests.sql  create_table_character_skills.sql  create_table_character_spells.sql  create_table_character_vitals.sql  create_table_character_wallet.sql
idle-mmorpg-server/data/: server_data
idle-mmorpg-server/doc/: API.md  WebSocket.MD
(+1163 files in other folders)
